# plc-telemetry

./: .gitignore  AGENTS.md  README.md  _runner_bootstrap.py  git_types.txt  package-lock.json  package.json  plc_telemetry_platform_master_plan.md  pyproject.toml  run_record.py  run_view.py  tsconfig.base.json
apps/server/: package.json  tsconfig.json
apps/server/src/: config.ts  index.ts  session-store.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
docs/: adaptive-plc-support.docx
docs/adr/: 0001-node-typescript-greenfield-replatform.md
legacy/python-mvp/: README.md  run_export.py  run_plc_telemetry.py  run_sessions.py
legacy/python-mvp/docs/: current-architecture.docx
legacy/python-mvp/examples/: ads_config.yaml
legacy/python-mvp/src/plc_telemetry/: __init__.py
legacy/python-mvp/src/plc_telemetry/core/config/: loader.py
legacy/python-mvp/src/plc_telemetry/core/models/: enums.py  sample.py  (+1 more)
legacy/python-mvp/src/plc_telemetry/gui/: app.py
legacy/python-mvp/src/plc_telemetry/utils/: session_paths.py
legacy/python-mvp/tests/: test_cli.py  test_exporters.py
src/plc_telemetry/: cli.py
src/plc_telemetry/analysis/: session_analysis.py
src/plc_telemetry/core/models/: signal_definition.py
src/plc_telemetry/core/storage/: exporters.py
src/plc_telemetry/gui/: app.py
src/plc_telemetry/transports/ads/: symbol_reader.py
src/plc_telemetry/transports/base/: __init__.py
tests/: conftest.py  test_config_loader.py  test_gui.py  test_models.py  test_recording.py  test_runners.py
(+8 files in other folders)
